media-server/istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: envoy-ingress
  namespace: istio-system
spec:
  rules:
  - host: torrenegra.page
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
